# opengl-engine-showcase

./: .gitignore  CMakeLists.txt
lib/qtimgui/: ImGuiRenderer.cpp  README.md
resources/shaders/: simple-fragment.glsl  simple-vertex.glsl
src/: main.cpp
src/debug/: DebugWindow.cpp  DebugWindow.h
src/engine/: World.cpp  World.h
src/engine/camera/: Camera.cpp  Camera.h
src/engine/demo-objects/: Cube.cpp  Cube.h  DemoObject.h  Triangle.cpp  Triangle.h
src/engine/lighting/: DirectionalLight.h  Material.h  PointLight.h
src/engine/shader/: ShaderCompilationException.h  ShaderManager.cpp  ShaderManager.h  ShaderProgramCompilationException.h
src/engine/texture/: TextureManager.cpp  TextureManager.h
src/ui/: GLRendererWindow.cpp  GLRendererWindow.h  MainWindow.cpp  MainWindow.h
